--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <label for="message">Message</label>
         <textarea name="message" type="text" id="message" placeholder="Type your message"></textarea>
-        <input type="submit" name="submit" value="submit">
+        <input type="submit" name="submit" value="submit" class="btn-contact-form">
       </form>
     </section>
 
@@ -53,7 +53,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Meet Me</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Yuval Davidov</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -156,7 +156,7 @@
         <div class="team-member">
           <img class="mx-auto rounded-circle" src="img/team/me.jpg" alt="">
           <h4>Yuval Davidov</h4>
-          <p class="text-muted">Lead Marketer</p>
+          <p class="text-muted">Learning code</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
@@ -233,8 +233,8 @@
   <div class="modal-container">
 
   </div>
-  <!-- Modal 1
-  <div class="portfolio-modal modal fade" id="proj-modal" tabindex="-1" role="dialog" aria-hidden="true">
+  <!-- Modal 1 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
@@ -246,26 +246,14 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <!-- Project Details Go Here -->
-  <h2>Project Name</h2>
-  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-  <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-  <p></p>
-  <ul class="list-inline">
-    <li class="date">Date: <span></span></li>
-    <li class="client">Client: Threads</li>
-    <li class="category">Category: Illustration</li>
-  </ul>
-  <button class="btn btn-primary" data-dismiss="modal" type="button">
-    <i class="fa fa-times"></i>
-    Close Project</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
